[package]
name = "red-tomato"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.33.3"
chrono = "0.4"
raw-window-handle = "0.6"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

