[package]
name = "red-tomato"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[build-dependencies]
ico = "0.5.0"
winres = "0.1"

[dependencies]
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.33.3"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
dirs = "6.0.0"
raw-window-handle = "0.6"
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging"] }

